Update about screen with new window component

--- a/source/components/about.astro
+++ b/source/components/about.astro
@@ -1,26 +1,19 @@
 ---
 import data from '../../package.json';
-import Icon from "./icon.astro";
+import Window from './window.astro';
 ---
 
 <div class="about" style="display: none" x-show="about" x-transition>
-  <div class="about-splash" x-on:click.outside="toggleAbout">
-    <div class="about-splash_header">
-      <div class="about-splash_product">StaticBook</div>
-      <button class="about-splash_close" x-on:click="toggleAbout">
-        <Icon type="x" />
-      </button>
+  <Window title="Über StaticBook" close="toggleAbout">
+    <div class="about-sheet">
+      <p class="about-sheet_version">Version {data.version}</p>
+      <hr class="about-sheet_divider">
+      <a class="about-owner" href="https://schmidt-joer.com/" target="_blank" rel="noopener noreferrer">
+        <img class="about-owner_logo" src="/assets/icons/logo_schmidt-joer.svg" alt="">
+        <span class="about-owner_name">Schmidt & Joer</span>
+      </a>
     </div>
-    <p class="about-splash_version">Version {data.version}</p>
-    <ul class="about-splash_packages">Verwendete Bibliotheken
-      {Object.entries(data.devDependencies).map(([name, version]) => <li>{name}: {version}</li>)}
-      {Object.entries(data.dependencies).map(([name, version]) => <li>{name}: {version}</li>)}
-    </ul>
-    <a class="about-splash_owner" href="https://schmidt-joer.com/" target="_blank" rel="noopener noreferrer">
-      <img class="about-splash_logo" src="/assets/icons/logo_schmidt-joer.svg" alt="">
-      <span class="about-splash_name">Schmidt & Joer</span>
-    </a>
-  </div>
+  </Window>
 </div>
 
 <style lang="scss">
@@ -32,49 +25,23 @@ import Icon from "./icon.astro";
     display: grid;
     place-content: center;
 
-    &-splash {
-      min-width: 17rem;
-      background: var(--c-010);
-      padding: 1.5rem;
-      border-radius: .75rem;
+    &-sheet {
+      line-height: 1rem;
+      display: grid;
+      justify-items: center;
+      gap: .75rem;
 
-      &_header {
-        justify-content: space-between;
-        display: flex;
-        gap: 3rem;
-        margin-bottom: .75rem;
-      }
-
-      &_version {
-        margin-bottom: .75rem;
-      }
-
-      &_product {
-        font-size: 1.5rem;
-        line-height: 2rem;
-        font-weight: 500;
-      }
-
-      &_close {
-        padding: .5rem;
+      &_divider {
+        width: 100%;
+        height: .0625rem;
         background: var(--c-020);
-        border-radius: .75rem;
       }
+    }
 
-      &_packages {
-        list-style-position: inside;
-        margin-bottom: 1.25rem;
-
-        li {
-          color: var(--c-060);
-        }
-      }
-
-      &_owner {
-        display: flex;
-        gap: .5rem;
-        line-height: 1rem;
-      }
+    &-owner {
+      display: flex;
+      gap: .5rem;
+      line-height: 1rem;
 
       &_logo {
         width: 1rem;
