--- a/source/components/footer.astro
+++ b/source/components/footer.astro
@@ -2,7 +2,7 @@
 import About from "./about.astro";
 ---
 
-<footer class="footer" x-data="utils">
+<footer class="footer">
   <button class="footer-button" x-on:click="toggleAbout">Über StaticBook</button>
   <About/>
 </footer>
