--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -22,7 +22,7 @@ const { meta } = Astro.props;
 <Head {meta} />
 
 <body>
-  <div class="page">
+  <div class="page" x-data="utility">
     <Navigation />
     <Contents />
     <main class="page_markdown">
